Bug 496413 - Whenever leaving telemetry screen in settings, user is asked for changes confirmation
Summary: Whenever leaving telemetry screen in settings, user is asked for changes conf...
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.2.80
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-18 10:49 UTC by przem.formela
Modified: 2024-11-18 12:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description przem.formela 2024-11-18 10:49:17 UTC
SUMMARY
If the user made any changes to the telemetry settings in akregator, they are asked for the confirmation of changes twice. This happens not only when the changes are made but each subsequent time after that when the page is opened.

STEPS TO REPRODUCE
1. open settings → feedback
2. change some settings from default (or don't change them if they already are different)
3. switch tab

OBSERVED RESULT
There's a confirmation modal about saving or discarding the introduced changes (even if no changes were introduced this time). Regardless of the option chosen, another one appears afterwards.

EXPECTED RESULT
Confirmation modal appears only once and only if there were any changes made this time.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Kernel Version: 6.11.8-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6700 XT

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2024-11-18 12:46:30 UTC
Git commit 7928ee465def64f7ab6db81bf05550b2caac24c0 by Laurent Montel.
Committed on 18/11/2024 at 12:45.
Pushed by mlaurent into branch 'release/24.12'.

Fix bug 496413:  Whenever leaving telemetry screen in settings, user is asked for changes confirmation
FIXED-IN: 24.12.0

M  +3    -2    configuration/akregator_config_userfeedback.cpp
M  +1    -1    configuration/akregator_config_userfeedback.h

https://invent.kde.org/pim/akregator/-/commit/7928ee465def64f7ab6db81bf05550b2caac24c0