Fix bug 496413:  Whenever leaving telemetry screen in settings, user is asked for changes confirmation

BUG: 496413
FIXED-IN: 24.12.0